docs/api/qiskit/2.0/qiskit.circuit.library.EvolvedOperatorAnsatz.mdx
---
title: EvolvedOperatorAnsatz (v2.0)
description: API reference for qiskit.circuit.library.EvolvedOperatorAnsatz in qiskit v2.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.EvolvedOperatorAnsatz
---

# EvolvedOperatorAnsatz

<Class id="qiskit.circuit.library.EvolvedOperatorAnsatz" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/library/n_local/evolved_operator_ansatz.py#L281-L476" signature="qiskit.circuit.library.EvolvedOperatorAnsatz(operators=None, reps=1, evolution=None, insert_barriers=False, name='EvolvedOps', parameter_prefix='t', initial_state=None, flatten=None)" modifiers="class">
  Bases: [`NLocal`](qiskit.circuit.library.NLocal "qiskit.circuit.library.n_local.n_local.NLocal")

  The evolved operator ansatz.

  **Parameters**

  *   **operators** (*BaseOperator |* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)") *| None*) – The operators to evolve. If a circuit is passed, we assume it implements an already evolved operator and thus the circuit is not evolved again. Can be a single operator (circuit) or a list of operators (and circuits).
  *   **reps** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of times to repeat the evolved operators.
  *   **evolution** (*EvolutionBase |* [*EvolutionSynthesis*](qiskit.synthesis.EvolutionSynthesis "qiskit.synthesis.EvolutionSynthesis") *| None*) – A specification of which evolution synthesis to use for the [`PauliEvolutionGate`](qiskit.circuit.library.PauliEvolutionGate "qiskit.circuit.library.PauliEvolutionGate"). Defaults to first order Trotterization.
  *   **insert\_barriers** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – Whether to insert barriers in between each evolution.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – The name of the circuit.
  *   **parameter\_prefix** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| Sequence\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*]*) – Set the names of the circuit parameters. If a string, the same prefix will be used for each parameters. Can also be a list to specify a prefix per operator.
  *   **initial\_state** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| None*) – A [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") object to prepend to the circuit.
  *   **flatten** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)") *| None*) – Set this to `True` to output a flat circuit instead of nesting it inside multiple layers of gate objects. By default currently the contents of the output circuit will be wrapped in nested objects for cleaner visualization. However, if you’re using this circuit for anything besides visualization its **strongly** recommended to set this flag to `True` to avoid a large performance overhead for parameter binding.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.ancillas">
    A list of `AncillaQubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.clbits">
    A list of `Clbit`s in the order that they were added. You should not mutate this.

    **Example**

    ```python
    from qiskit import QuantumRegister, ClassicalRegister, QuantumCircuit

    qr1 = QuantumRegister(2)
    qr2 = QuantumRegister(1)
    cr1 = ClassicalRegister(2)
    cr2 = ClassicalRegister(1)
    qc = QuantumCircuit(qr1, qr2, cr1, cr2)

    print("List the qubits in this circuit:", qc.qubits)
    print("List the classical bits in this circuit:", qc.clbits)
    ```

    ```text
    List the qubits in this circuit: [Qubit(QuantumRegister(2, 'q0'), 0),
    Qubit(QuantumRegister(2, 'q0'), 1), Qubit(QuantumRegister(1, 'q1'), 0)]
    List the classical bits in this circuit: [Clbit(ClassicalRegister(2, 'c0'), 0),
    Clbit(ClassicalRegister(2, 'c0'), 1), Clbit(ClassicalRegister(1, 'c1'), 0)]
    ```
  </Attribute>

  ### cregs

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.cregs">
    A list of `Clbit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.data">
    The circuit data (instructions and context).

    **Returns**

    a list-like object containing the [`CircuitInstruction`](qiskit.circuit.CircuitInstruction "qiskit.circuit.CircuitInstruction")s for each instruction.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.duration">
    The total duration of the circuit, set by a scheduling transpiler pass. Its unit is specified by [`unit`](#qiskit.circuit.library.EvolvedOperatorAnsatz.unit "qiskit.circuit.library.EvolvedOperatorAnsatz.unit").

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.duration` is deprecated as of Qiskit 1.3.0. It will be removed in Qiskit 3.0.0.
    </Admonition>
  </Attribute>

  ### entanglement

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.entanglement">
    Get the entanglement strategy.

    **Returns**

    The entanglement strategy, see `get_entangler_map()` for more detail on how the format is interpreted.
  </Attribute>

  ### entanglement\_blocks

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.entanglement_blocks">
    The blocks in the entanglement layers.

    **Returns**

    The blocks in the entanglement layers.
  </Attribute>

  ### evolution

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.evolution">
    The evolution converter used to compute the evolution.

    **Returns**

    The evolution converter used to compute the evolution.

    **Return type**

    [EvolutionSynthesis](qiskit.synthesis.EvolutionSynthesis "qiskit.synthesis.EvolutionSynthesis")
  </Attribute>

  ### flatten

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.flatten">
    Returns whether the circuit is wrapped in nested gates/instructions or flattened.
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.global_phase">
    The global phase of the current circuit scope in radians.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    circuit = QuantumCircuit(2)
    circuit.h(0)
    circuit.cx(0, 1)
    print(circuit.global_phase)
    ```

    ```text
    0.0
    ```

    ```python
    from numpy import pi

    circuit.global_phase = pi/4
    print(circuit.global_phase)
    ```

    ```text
    0.7853981633974483
    ```
  </Attribute>

  ### initial\_state

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.initial_state">
    Return the initial state that is added in front of the n-local circuit.

    **Returns**

    The initial state.
  </Attribute>

  ### insert\_barriers

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.insert_barriers">
    If barriers are inserted in between the layers or not.

    **Returns**

    `True`, if barriers are inserted in between the layers, `False` if not.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.instances" attributeValue="202" />

  ### layout

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.layout">
    Return any associated layout information about the circuit.

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") function: an initial layout that permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout, which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.

    **Example**

    ```python
    from qiskit import QuantumCircuit
    from qiskit.providers.fake_provider import GenericBackendV2
    from qiskit.transpiler import generate_preset_pass_manager

    # Create circuit to test transpiler on
    qc = QuantumCircuit(3, 3)
    qc.h(0)
    qc.cx(0, 1)
    qc.swap(1, 2)
    qc.cx(0, 1)

    # Add measurements to the circuit
    qc.measure([0, 1, 2], [0, 1, 2])

    # Specify the QPU to target
    backend = GenericBackendV2(3)

    # Transpile the circuit
    pass_manager = generate_preset_pass_manager(
    optimization_level=1, backend=backend
    )
    transpiled = pass_manager.run(qc)

    # Print the layout after transpilation
    print(transpiled.layout.routing_permutation())
    ```

    ```text
    [0, 1, 2]
    ```
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.metadata">
    Arbitrary user-defined dictionary of metadata for the circuit.

    Qiskit will not examine the content of this mapping, but it will pass it through the transpiler and reattach it to the output, so you can track your own metadata.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    qc = QuantumCircuit(2, 2, metadata={'experiment_type': 'Bell state experiment'})

    print(qc.metadata)
    ```

    ```text
    {'experiment_type': 'Bell state experiment'}
    ```
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_ancillas">
    Return the number of ancilla qubits.

    **Example**

    ```python
    from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister

    # Create a 2-qubit quantum circuit
    reg = QuantumRegister(2)
    qc = QuantumCircuit(reg)

    # Create an ancilla register with 1 qubit
    anc = AncillaRegister(1)
    qc.add_register(anc)  # Add the ancilla register to the circuit

    print("Number of ancilla qubits:", qc.num_ancillas)
    ```

    ```text
    Number of ancilla qubits: 1
    ```
  </Attribute>

  ### num\_captured\_stretches

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_captured_stretches">
    The number of stretches in the circuit marked as captured from an enclosing scope.

    This is the length of the `iter_captured_stretches()` iterable. If this is non-zero, [`num_input_vars`](#qiskit.circuit.library.EvolvedOperatorAnsatz.num_input_vars "qiskit.circuit.library.EvolvedOperatorAnsatz.num_input_vars") must be zero.
  </Attribute>

  ### num\_captured\_vars

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_captured_vars">
    The number of real-time classical variables in the circuit marked as captured from an enclosing scope.

    This is the length of the `iter_captured_vars()` iterable. If this is non-zero, [`num_input_vars`](#qiskit.circuit.library.EvolvedOperatorAnsatz.num_input_vars "qiskit.circuit.library.EvolvedOperatorAnsatz.num_input_vars") must be zero.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_clbits">
    Return number of classical bits.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    # Create a new circuit with two qubits and one classical bit
    qc = QuantumCircuit(2, 1)
    print("Number of classical bits:", qc.num_clbits)
    ```

    ```text
    Number of classical bits: 1
    ```
  </Attribute>

  ### num\_declared\_stretches

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_declared_stretches">
    The number of stretches in the circuit that are declared by this circuit scope, excluding captures.

    This is the length of the `iter_declared_stretches()` iterable.
  </Attribute>

  ### num\_declared\_vars

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_declared_vars">
    The number of real-time classical variables in the circuit that are declared by this circuit scope, excluding inputs or captures.

    This is the length of the `iter_declared_vars()` iterable.
  </Attribute>

  ### num\_identifiers

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_identifiers">
    The number of real-time classical variables and stretches in the circuit.

    This is equal to [`num_vars()`](#qiskit.circuit.library.EvolvedOperatorAnsatz.num_vars "qiskit.circuit.library.EvolvedOperatorAnsatz.num_vars") + [`num_stretches()`](#qiskit.circuit.library.EvolvedOperatorAnsatz.num_stretches "qiskit.circuit.library.EvolvedOperatorAnsatz.num_stretches").
  </Attribute>

  ### num\_input\_vars

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_input_vars">
    The number of real-time classical variables in the circuit marked as circuit inputs.

    This is the length of the `iter_input_vars()` iterable. If this is non-zero, [`num_captured_vars`](#qiskit.circuit.library.EvolvedOperatorAnsatz.num_captured_vars "qiskit.circuit.library.EvolvedOperatorAnsatz.num_captured_vars") must be zero.
  </Attribute>

  ### num\_layers

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_layers">
    Return the number of layers in the n-local circuit.

    **Returns**

    The number of layers in the circuit.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_parameters">
    The number of parameter objects in the circuit.
  </Attribute>

  ### num\_parameters\_settable

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_parameters_settable">
    The number of total parameters that can be set to distinct values.

    This does not change when the parameters are bound or exchanged for same parameters, and therefore is different from `num_parameters` which counts the number of unique [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects currently in the circuit.

    **Returns**

    The number of parameters originally available in the circuit.

    <Admonition title="Note" type="note">
      This quantity does not require the circuit to be built yet.
    </Admonition>
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_qubits">
    Returns the number of qubits in this circuit.

    **Returns**

    The number of qubits.
  </Attribute>

  ### num\_stretches

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_stretches">
    The number of stretches in the circuit.

    This is the length of the `iter_stretches()` iterable.
  </Attribute>

  ### num\_vars

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.num_vars">
    The number of real-time classical variables in the circuit.

    This is the length of the `iter_vars()` iterable.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.op_start_times">
    Return a list of operation start times.

    <Admonition title="Note" type="note">
      This attribute computes the estimate starting time of the operations in the scheduled circuit and only works for simple circuits that have no control flow or other classical feed-forward operations.
    </Admonition>

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Example**

    ```python
    from qiskit import QuantumCircuit
    from qiskit.providers.fake_provider import GenericBackendV2
    from qiskit.transpiler import generate_preset_pass_manager

    qc = QuantumCircuit(2)
    qc.h(0)
    qc.cx(0, 1)
    qc.measure_all()

    # Print the original circuit
    print("Original circuit:")
    print(qc)

    # Transpile the circuit with a specific basis gates list and print the resulting circuit
    backend = GenericBackendV2(2, basis_gates=['u1', 'u2', 'u3', 'cx'])
    pm = generate_preset_pass_manager(
        optimization_level=1, backend=backend, scheduling_method="alap"
    )
    transpiled_qc = pm.run(qc)
    print("Transpiled circuit with basis gates ['u1', 'u2', 'u3', 'cx']:")
    print(transpiled_qc)

    # Print the start times of each instruction in the transpiled circuit
    print("Start times of instructions in the transpiled circuit:")
    for instruction, start_time in zip(transpiled_qc.data, transpiled_qc.op_start_times):
        print(f"{instruction.operation.name}: {start_time}")
    ```

    ```text
    Original circuit:
            ┌───┐      ░ ┌─┐
    q_0: ┤ H ├──■───░─┤M├───
            └───┘┌─┴─┐ ░ └╥┘┌─┐
    q_1: ─────┤ X ├─░──╫─┤M├
                └───┘ ░  ║ └╥┘
    meas: 2/══════════════╩══╩═
                        0  1

    Transpiled circuit with basis gates ['u1', 'u2', 'u3', 'cx']:
                ┌─────────┐          ░ ┌─────────────────┐┌─┐
    q_0 -> 0 ───┤ U2(0,π) ├──────■───░─┤ Delay(1255[dt]) ├┤M├
            ┌──┴─────────┴───┐┌─┴─┐ ░ └───────┬─┬───────┘└╥┘
    q_1 -> 1 ┤ Delay(196[dt]) ├┤ X ├─░─────────┤M├─────────╫─
            └────────────────┘└───┘ ░         └╥┘         ║
    meas: 2/═══════════════════════════════════╩══════════╩═
                                                1          0

    Start times of instructions in the transpiled circuit:
    u2: 0
    delay: 0
    cx: 196
    barrier: 2098
    delay: 2098
    measure: 3353
    measure: 2098
    ```

    **Returns**

    List of integers representing instruction estimated start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.13)") – When circuit is not scheduled.
  </Attribute>

  ### operators

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.operators">
    The operators that are evolved in this circuit.

    **Returns**

    The operators to be evolved (and circuits) contained in this ansatz.

    **Return type**

    [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")
  </Attribute>

  ### ordered\_parameters

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.ordered_parameters">
    The parameters used in the underlying circuit.

    This includes float values and duplicates.

    **Examples**

    ```python
    >>> # prepare circuit ...
    >>> print(nlocal)
         ┌───────┐┌──────────┐┌──────────┐┌──────────┐
    q_0: ┤ Ry(1) ├┤ Ry(θ[1]) ├┤ Ry(θ[1]) ├┤ Ry(θ[3]) ├
         └───────┘└──────────┘└──────────┘└──────────┘
    >>> nlocal.parameters
    {Parameter(θ[1]), Parameter(θ[3])}
    >>> nlocal.ordered_parameters
    [1, Parameter(θ[1]), Parameter(θ[1]), Parameter(θ[3])]
    ```

    **Returns**

    The parameters objects used in the circuit.
  </Attribute>

  ### parameter\_bounds

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.parameter_bounds">
    The parameter bounds for the unbound parameters in the circuit.

    **Returns**

    A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If `None` is returned, problem is fully unbounded.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.parameters">
    The parameters defined in the circuit.

    This attribute returns the [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit sorted alphabetically. Note that parameters instantiated with a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") are still sorted numerically.

    **Examples**

    The snippet below shows that insertion order of parameters does not matter.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> a, b, elephant = Parameter("a"), Parameter("b"), Parameter("elephant")
    >>> circuit = QuantumCircuit(1)
    >>> circuit.rx(b, 0)
    >>> circuit.rz(elephant, 0)
    >>> circuit.ry(a, 0)
    >>> circuit.parameters  # sorted alphabetically!
    ParameterView([Parameter(a), Parameter(b), Parameter(elephant)])
    ```

    Bear in mind that alphabetical sorting might be unintuitive when it comes to numbers. The literal “10” comes before “2” in strict alphabetical sorting.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter
    >>> angles = [Parameter("angle_1"), Parameter("angle_2"), Parameter("angle_10")]
    >>> circuit = QuantumCircuit(1)
    >>> circuit.u(*angles, 0)
    >>> circuit.draw()
       ┌─────────────────────────────┐
    q: ┤ U(angle_1,angle_2,angle_10) ├
       └─────────────────────────────┘
    >>> circuit.parameters
    ParameterView([Parameter(angle_1), Parameter(angle_10), Parameter(angle_2)])
    ```

    To respect numerical sorting, a [`ParameterVector`](qiskit.circuit.ParameterVector "qiskit.circuit.ParameterVector") can be used.

    ```python
    >>> from qiskit.circuit import QuantumCircuit, Parameter, ParameterVector
    >>> x = ParameterVector("x", 12)
    >>> circuit = QuantumCircuit(1)
    >>> for x_i in x:
    ...     circuit.rx(x_i, 0)
    >>> circuit.parameters
    ParameterView([
        ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
        ParameterVectorElement(x[2]), ParameterVectorElement(x[3]),
        ..., ParameterVectorElement(x[11])
    ])
    ```

    **Returns**

    The sorted [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects in the circuit.
  </Attribute>

  ### preferred\_init\_points

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.preferred_init_points">
    Getter of preferred initial points based on the given initial state.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.prefix" attributeValue="'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.qubits">
    A list of `Qubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### reps

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.reps">
    The number of times rotation and entanglement block are repeated.

    **Returns**

    The number of repetitions.
  </Attribute>

  ### rotation\_blocks

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.rotation_blocks">
    The blocks in the rotation layers.

    **Returns**

    The blocks in the rotation layers.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.unit">
    The unit that [`duration`](#qiskit.circuit.library.EvolvedOperatorAnsatz.duration "qiskit.circuit.library.EvolvedOperatorAnsatz.duration") is specified in.

    <Admonition title="Deprecated since version 1.3.0" type="danger">
      The property `qiskit.circuit.quantumcircuit.QuantumCircuit.unit` is deprecated as of Qiskit 1.3.0. It will be removed in Qiskit 3.0.0.
    </Admonition>
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.EvolvedOperatorAnsatz.name" attributeTypeHint="str">
    A human-readable name for the circuit.

    **Example**

    ```python
    from qiskit import QuantumCircuit

    qc = QuantumCircuit(2, 2, name="my_circuit")
    print(qc.name)
    ```

    ```text
    my_circuit
    ```
  </Attribute>
</Class>

